feat: add SecurityUtils for owner-based resource authorization